# cuddly-octo-fiesta

./: .gitignore  README.md  exp_track.md  pyproject.toml
experiments/tank_vs_tank/: __init__.py  diy_game_engine.py  diy_map_0.map  frame_buffer.txt  optimization_diy.py  policy.py
experiments/tank_vs_tank/ea_optim/: __init__.py  problem.py
experiments/tank_vs_tank/ea_optim/algorithms/: __init__.py  base.py  random.py
experiments/tank_vs_tank/ea_optim/benchmarks/: __init__.py  rosenbrock.py
experiments/tank_vs_tank/results/2023-11-22_08-35-04/: best_solution_0.json  best_solution_1100.json  best_solution_1600.json  best_solution_1800.json  best_solution_300.json
experiments/tank_vs_tank/results/2023-11-22_10-23-03/: best_solution_0.json  best_solution_100.json  best_solution_1500.json  best_solution_1700.json  best_solution_300.json  best_solution_600.json
