[tool.poetry]
name = "cuddly-octo-fiesta"
version = "0.1.0"
description = ""
authors = ["osm3000"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.3"
numpy = "^1.26.2"
imageio = "^2.33.0"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
